# P6

./: .gitignore  BuildingType_label_encoding_mapping.json  Dockerfile.streamlit  LargestPropertyUseType_label_encoding_mapping.json  PrimaryPropertyType_label_encoding_mapping.json  README.md  app.py  bentofile.yaml  docker-compose.yaml  pyproject.toml  service.py
notebooks/: feature_names.txt  modelistation_supervisee.ipynb
