[project]
name = "p6"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarek",email = "tareknoubli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "bentoml (>=1.4.29,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
